--- a/config/database.yml
+++ b/config/database.yml
@@ -79,8 +79,8 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  encoding: utf8
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  <<: *default
+  database: gmat_production
 
   # database: gmat_production
   # password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
