--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -1,11 +1,9 @@
 production:
   solr:
-    hostname: localhost
-    port: 8983
+    hostname: 127.0.0.1
+    port: 8080
     log_level: WARNING
-    path: /solr/production
-    # read_timeout: 2
-    # open_timeout: 0.5
+    path: /solr
 
 development:
   solr:
