--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ solr/pids
 
 config/database.yml
 config/secrets.yml
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
