--- a/test/fixtures/labels.yml
+++ b/test/fixtures/labels.yml
@@ -1,9 +1,29 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
-  name: MyString
-  category: MyString
+  id: 1
+  name: OG12
+  category: 来源
 
 two:
-  name: MyString
-  category: MyString
+  id: 2
+  name: Prep07
+  category: 来源
+
+three:
+  id: 3
+  name: 语法SC
+  category: 题型
+
+four:
+  id: 4
+  name: 逻辑CR
+  category: 题型
+
+five:
+  id: 5
+  name: 500-600
+  category: 难度
+
+six:
+  id: 6
+  name: 600-700
+  category: 难度
